--- a/main.css
+++ b/main.css
@@ -2,4 +2,211 @@ body{
     margin: 0;
     background-color: rgb(3, 1, 13);
     overflow: hidden;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+#settings{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 20px;
+    top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(112, 235, 239);
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 5px white;
+}   
+
+#settings:hover{
+    background-color: rgb(52, 154, 157);
+}
+
+#settings img{
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+}
+
+#settingsPopUp{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 500px;
+    height: 80%;
+    visibility: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 5px #c0c0c0;
+    border: outset black 5px;
+    overflow: hidden;
+}
+
+#closePopUpContainer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 30px;
+    padding: 10px 20px;
+}
+
+#closePopUpIcon{
+    cursor: pointer;
+}
+
+#addLayerContainer{
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 20px;
+}
+
+#addLayerIcon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: green;
+    border: solid black 1px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#addLayerIcon:hover{
+    background-color: green;
+    color: white;
+}
+
+#settingsPopUpContentContainer{
+    height: calc(100% - 100px);
+    overflow: auto;
+}
+
+#settingsPopUpContentContainer .layerSetting{
+    border-bottom: solid black 1px;
+}
+
+.layerSetting{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
+    flex-direction: column;
+}
+
+.layerSetting > div{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
+}
+
+.removeLayer{
+    visibility: hidden;
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.removeLayer img{
+    width: 30px;
+    height: auto;
+}
+
+.layerSetting:hover{
+    background-color: rgb(210, 210, 210);
+}
+
+.layerSetting:hover .removeLayer{
+    visibility: visible;
+}
+
+#outerPopUp{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    visibility: hidden;
+}
+
+#addLayerPopUp{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 300px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px #c0c0c0;
+    border: outset black 5px;
+    overflow: hidden;
+}
+
+#closeLayerPopUpContainer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 30px;
+    padding: 10px 20px;
+}
+
+#closeLayerPopUpIcon{
+    cursor: pointer;
+}
+
+.customizeDiv{
+    width: 80%;
+    height: 50px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: dotted black 1px;
+}
+
+#saveLayerContainer{
+    display: flex;
+    justify-content: center;
+    padding: 10px 20px;
+}
+
+#saveLayerBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: green;
+    border: solid black 1px;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+#saveLayerBtn:hover{
+    background-color: green;
+    color: white;
 }
