--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ body{
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    width: 500px;
+    width: 400px;
     height: 80%;
     visibility: hidden;
     border-radius: 20px;
@@ -67,20 +67,9 @@ body{
 
 #closePopUpContainer{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    font-size: 30px;
-    padding: 10px 20px;
-}
-
-#closePopUpIcon{
-    cursor: pointer;
-}
-
-#addLayerContainer{
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px 20px;
+    padding: 10px 30px;
 }
 
 #addLayerIcon{
@@ -98,6 +87,11 @@ body{
     color: white;
 }
 
+#closePopUpIcon{
+    cursor: pointer;
+    font-size: 30px;
+}
+
 #settingsPopUpContentContainer{
     height: calc(100% - 100px);
     overflow: auto;
@@ -111,19 +105,30 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 20px;
-    flex-direction: column;
+    padding: 10px 0;
 }
 
-.layerSetting > div{
-    width: 100%;
+.layerInfoContainer{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.layerSingleInfoContainer{
+    height: 30px;
+    padding-left: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 20px;
+}
+
+.layerSingleInfoContainer input{
+    width: 100px;
+    box-sizing: border-box;
 }
 
 .removeLayer{
+    width: 20%;
     visibility: hidden;
     color: red;
     display: flex;
